--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="nav-search border">
                 <select class="search-select">
                     <option>ALL</option>
-                    
+
                 </select>
                 <input placeholder="Search amazon" class="search-input">
                 <button class="search-btn">
@@ -119,7 +119,7 @@
         <div class="box">
             <div class="box-content">
                 <h2>Up to 30% off | Medicines</h2>
-                <img src="medicines.png" alt="Medicines">
+                <img src="Medicines.png" alt="Medicines">
                 <p>See more</p>
             </div>
         </div>
